app/mainPage.module.css
/*
ROOT STYLES
*/

.main {
  display: block;
}

.logo {
  height: 30vmin;
  pointer-events: none;
}

.app {
  text-align: center;
  background-color: black;
}

.page {
  max-width: 1440px;
  margin: 0 auto;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
  padding-left: 2rem;
  padding-right: 2rem;
}


/*
Facts Panel
*/

.factsPanel {
  display: flex;
  max-width: 100vw;
  align-items: center;
  margin-bottom: 4rem;
}

.factsPanelText {
  display: grid;
}

.factsPanelTextGroup {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: left;
}

.dsimgContainer {
  justify-self: end;
  width: 100%;
}

.dsimg {
  max-width: 100%;
  min-width: 365px;
  min-height: 425px;
  object-fit: cover;

  max-height: 100%;
  width: auto;
  height: auto;
}

@-webkit-keyframes rotating /* Safari and Chrome */ {
  from {
    -webkit-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes rotating {
  from {
    -ms-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  to {
    -ms-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
.rotating {
  -webkit-animation: rotating 8s linear infinite;
  -moz-animation: rotating 8s linear infinite;
  -ms-animation: rotating 8s linear infinite;
  -o-animation: rotating 8s linear infinite;
  animation: rotating 8s linear infinite;
}


/*
Methodologies Panel
*/

.methodologiesPanel {
  display: flex;
  flex-direction: column;
  margin-bottom: 4rem;
}

.testimonials {
  display: flex;
  gap: 3rem;
  max-width: 100vw;
  text-align: left;
}

.testimonial {
  display: flex;
  flex-direction: column;
  flex: 1;
  flex-basis: 0;
}

.testimonials .testimonialTitle h3 {
  margin: 0;
}

.testimonials .testimonialTxt p{
  font-weight: 300;
  margin-top: 0.5em;
}

.testimonials .testimonialSmallTxt {
  font-weight: 200;
  font-size: 0.5em;
}


/*
Articles Panel
*/

.articlesPanel {
  width: 100%;
  margin-bottom: 3rem;
}

.notebooks {
  display: flex;
  justify-content: space-evenly;
  max-width: 100vw;
}





/*
MULTIPLE USAGE CLASSES
*/

.header {
  text-align: left;
}

.subHeader p {
  margin: 0 ;
}


/* ############## */
/* MOBILE SUPPORT */
/* ############## */

@media screen and (max-width: 765px) {

  .factsPanel {
    display: flex;
    flex-direction: column;
  }

  .logo {
    width: 80vw;
  }

  .dsimg {
    min-width: 30%;
    min-height: 30%;
  }

  .testimonials {
    flex-direction: column;
  }

  .testimonial {
    text-align: center;
  }

  /* ------------- */

  .notebooks {
    flex-direction: column;
    gap: 2em;
    align-content: center;
    flex-wrap: wrap;
  }

  .bg {
    width: 70vw;
    max-width: 100%;
  }

  .bg p {
    font-size: 24px;
  }
}

